feat: Add unique index on Username in Users table
feat: Rename GetMenuDto to GetMenuDTO for consistency

feat: Update CreateTransaction response type to include ResponseCreateTransactionDTO

feat: Register IEventExecutorService in Dependency Injection

fix: Update IManageTransactionService to return ResponseCreateTransactionDTO

fix: Allow default CancellationToken in ExecuteAsync method of IResourceExecutorService

feat: Enhance ManageTransactionService to handle transaction events and create new DTOs

feat: Introduce TrxProductAttribute entity and update related entities

feat: Add email sending functionality with InfobipEmailService

feat: Implement event execution service for handling various events

feat: Create models for JSON REA definitions and parameters

feat: Add EmailRequest and EmailAttachment models for email handling

chore: Update Swagger documentation for GetMenuDTO changes
