# gsmapplications-frontend/swagger/gsm-application.json
@@ -18,17 +18,17 @@
             "content": {
               "text/plain": {
                 "schema": {
-                  "$ref": "#/components/schemas/GetMenuDtoApiResponse"
+                  "$ref": "#/components/schemas/GetMenuDTOApiResponse"
                 }
               },
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/GetMenuDtoApiResponse"
+                  "$ref": "#/components/schemas/GetMenuDTOApiResponse"
                 }
               },
               "text/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/GetMenuDtoApiResponse"
+                  "$ref": "#/components/schemas/GetMenuDTOApiResponse"
                 }
               }
             }
@@ -38,17 +38,17 @@
             "content": {
               "text/plain": {
                 "schema": {
-                  "$ref": "#/components/schemas/GetMenuDtoApiResponse"
+                  "$ref": "#/components/schemas/GetMenuDTOApiResponse"
                 }
               },
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/GetMenuDtoApiResponse"
+                  "$ref": "#/components/schemas/GetMenuDTOApiResponse"
                 }
               },
               "text/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/GetMenuDtoApiResponse"
+                  "$ref": "#/components/schemas/GetMenuDTOApiResponse"
                 }
               }
             }
@@ -691,7 +691,7 @@
         ],
         "type": "string"
       },
-      "GetMenuDto": {
+      "GetMenuDTO": {
         "type": "object",
         "properties": {
           "idProfile": {
@@ -706,7 +706,7 @@
         },
         "additionalProperties": false
       },
-      "GetMenuDtoApiResponse": {
+      "GetMenuDTOApiResponse": {
         "type": "object",
         "properties": {
           "success": {
@@ -717,7 +717,7 @@
             "nullable": true
           },
           "data": {
-            "$ref": "#/components/schemas/GetMenuDto"
+            "$ref": "#/components/schemas/GetMenuDTO"
           },
           "errorType": {
             "$ref": "#/components/schemas/ErrorType"
